@@ -1,3 +1,8 @@
+Tue Nov 23 22:00:12 MET 1999  Sven Neumann <sven@gimp.org>
+
+	* app/menus.c: Looks like I managed to accidentially revert my
+	change from Mon Nov 22. Put it back in.
+
 Tue Nov 23 21:22:01 MET 1999  Sven Neumann <sven@gimp.org>
 
 	* plug-ins/AlienMap/AlienMap.c
